[project]
name = "busylight-workspace"
version = "0.0.0"
requires-python = ">=3.11,<4.0"

[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
testpaths = [
    "packages/busylight-core/tests",
    "packages/busylight/tests",
]
pythonpath = [
    "packages/busylight-core/tests",
]

[dependency-groups]
dev = [
    "poethepoet",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "git-cliff",
]
